# ff-sims

./: .gitignore  CLAUDE.md  Dockerfile  Makefile  README.md  TODO.md  package-lock.json
analysis/: README.md  main.py  pyproject.toml
backend/: .gitignore  Makefile  go.mod  go.sum
crdb_export/: box_scores.csv  draft_selections.csv  leagues.csv  matchups.csv  players.csv  season_expected_wins.csv  sim_results.csv  sim_team_results.csv  simulations.csv  team_name_histories.csv  team_players.csv  teams.csv  transactions.csv  weekly_expected_wins.csv
database/: go.mod  main.go
docs/: archive-backfill.md  archive-purge.md  transaction-sync-operations.md  worker-versioning.md
scripts/: .gitignore  README.md  data.py  export_crdb.sh  games.csv  main.py  pyproject.toml  requirements.txt
scripts/database/: __init__.py  tables.py
scripts/models/: __init__.py  activity.py  player.py  roster.py  test_activity.py
scripts/simulation/: __init__.py  _season.py
scripts/src/models/: __init__.py  _league.py
scripts/src/sleeper/: __init__.py  _client.py
scripts/tests/: test_client.py
scripts/utils/: __init__.py  _helpers.py  io.py  math.py
v2/: CLAUDE.md  (+6 more)
workers/espn/: .gitignore  db.py  pyproject.toml  register_league.py  temporal_client.py  worker.py
workers/espn/activities/: credentials.py  draft.py  schedule.py  transactions.py
workers/espn/tests/: conftest.py  test_credentials.py  test_dispatcher.py  test_register_league.py  test_schedule.py  test_temporal_client.py  test_transactions.py
workers/espn/workflows/: dispatcher.py  draft.py  expected_wins.py  league_sync.py  player_status.py  retry.py  schedule.py  teams.py  transactions.py
(+555 files in other folders)
