[project]
name = "espn-temporal-worker"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "temporalio>=1.9.0",
    "espn-api>=0.33.0",
    "psycopg[binary]>=3.1.0",
    "python-dotenv>=1.0.0",
]

[project.scripts]
register-league = "register_league:main"

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.uv]
package = true

[tool.setuptools]
py-modules = ["register_league", "db", "temporal_client", "worker"]

[tool.setuptools.packages.find]
include = ["activities*", "workflows*"]
